--- a/now.json
+++ b/now.json
@@ -1,1 +1,10 @@
-{"build":{"env":{"NOTION_TOKEN":"@notion-token","BLOG_INDEX_ID":"@blog-index-id"}},"env":{"NOTION_TOKEN":"@notion-token","BLOG_INDEX_ID":"@blog-index-id"},"name":"2020.nitta.studio"}
+{
+  "build": {
+    "env": {
+      "NOTION_TOKEN": "@notion-token",
+      "BLOG_INDEX_ID": "@blog-index-id"
+    }
+  },
+  "env": { "NOTION_TOKEN": "@notion-token", "BLOG_INDEX_ID": "@blog-index-id" },
+  "name": "2020.nitta.studio"
+}
