--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "next build && node .next/serverless/scripts/build-rss.js",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "@zeit/react-jsx-parser": "^2.0.0",
     "dotenv": "^8.2.0",
