--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^9.1.8-canary.11",
     "prismjs": "^1.17.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^13.1.2",
