--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notion-blog",
   "version": "0.1.1",
   "scripts": {
-    "dev": "next dev --hostname=192.168.1.7",
+    "dev": "next dev",
     "start": "next start",
     "build": "next build && node .next/serverless/scripts/build-rss.js",
     "format": "prettier --write \"**/*.{js,jsx,json,ts,tsx,md,mdx,css,html,yml,yaml,scss,sass}\" --ignore-path .gitignore"
