--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prismjs": "^1.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-svg": "^11.0.19",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
